# warda

./: .gitignore  LICENSE  README.md  README_CN.md
agent/: .env.prod  main.py  pyproject.toml
agent/config/: config.py
agent/core/: __init__.py
agent/core/rtc/: agent_config.py
agent/plugins/camel/: __init__.py  chat_agent.py
agent/plugins/openai/: __init__.py  tts.py
agent/plugins/postgrest/: __init__.py  postgrest.py
agent/services/: __init__.py  service.py  service_topic.py
agent/services/agent_config/: database.py  model.py  service.py
agent/utils/: utils.py
playground/: .env.example  package-lock.json  package.json  tailwind.config.js
playground/src/: middleware.ts
playground/src/components/agentConfig/: agentConfigTile.tsx
playground/src/components/chat/: ChatMessage.tsx
playground/src/components/config/: AudioInputTile.tsx  NameValueRow.tsx
playground/src/components/playground/: Playground.tsx  PlaygroundHeader.tsx
playground/src/components/prompt/: PromptInput.tsx  PromptTile.tsx
playground/src/components/systemMessage/: SystemMessageInput.tsx  SystemMessageTile.tsx
playground/src/hooks/: useAgentConfig.tsx
playground/src/pages/: index.tsx
playground/src/pages/api/: token.ts
playground/src/pages/sign-in/: [[...index]].tsx
playground/src/pages/sign-up/: [[...index]].tsx
postgrest/: .env  docker-compose.override.yml  docker-compose.yml
postgrest/initdb/: agent.sql  create-anon-role.sh
